--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <div class="divCanvas">
         <canvas id="myCanvas"></canvas>
         <input type="text" id="imageUrl" class="imagenUrl" placeholder="Ingresa la URL de la imagen">
-        <button onclick="loadImage()">Cargar imagen</button>
+        <button class="botonMemes" onclick="loadImage()">Cargar imagen</button>
         <input type="text" id="topText" placeholder="Texto superior">
         <input type="text" id="bottomText" placeholder="Texto inferior">
         <input type="color" id="topColor" value="#000000">
         <input type="color" id="bottomColor" value="#000000">
         <button onclick="generateMeme()">Generar Meme</button>
-        <button onclick="downloadMeme()">Descargar Meme</button>
     </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
